2007-02-18 Raphael Neider <rneider AT web.de>

	* src/pic/glue.c (emitInitVal): fixed #1659894 (SIGSEGV on arrays)

2007-02-17 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/directives.c, support/cpp2/version.c:
	  synchronized with GCC CPP 4.1.2

2007-02-15 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/rtrack.h,
	* src/mcs51/rtrack.c: added register tracking for the mcs51 port,
	  by checking the strings passed by emitcode() to the assembler.
	  Feel free to change. This in part addresses RFE #482179. 
	  Set environment variable SDCC_RTRACK to enable.
	* src/mcs51/gen.c: inserted hooks
	* src/mcs51/ralloc.h: added two members to struct regs
	* support/regression/tests/regtrack.c: added

2007-02-14 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.y: fixed bug #1291133: duplicate members across enum(s)
	* Makefile.in: applied patch from Makefile related part of
	  #1469393: Compiler does not initialize static data

2007-02-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (geniCodeAssign): return (itemp) right instead of left
	  for better fix of bug 1273984, compiles pic16 rand.c

2007-02-12 Borut Razem <borut.razem AT siol.net>

	* src/pic16/main.c: fixed pic16 standard library directory bug

2007-02-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/gen.c (genSwap): fix swap regression test

2007-02-10 Borut Razem <borut.razem AT siol.net>

	* src/SDCCsymt.c: fixed bug #1159134: invalid duplicate declarations
	  with same scope
	* support/regression/tests/bug-1654060.c: added regression test for
	  #1654060

2007-02-09 Bernhard Held <bernhard AT bernhardheld.de>

	* src/mcs51/gen.c (genRet): fixed RFE 1652561: added code for bit to
	bit moves in return statement

2007-02-09 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.y: fixed bug #1654060 typedef within function causes
	  syntax error

2007-02-07 Maarten Brock <sourceforge.brock AT dse.nl>
